--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-oauth2-jwt-bearer": "^1.6.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
