--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^6.4.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-oauth2-jwt-bearer": "^1.6.0"
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-openid-connect": "^2.17.1"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
