--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
